Fix wrong font-weight part II

--- a/packages/core/src/css/core.scss
+++ b/packages/core/src/css/core.scss
@@ -135,7 +135,7 @@
   --way-font-weight-semi-bold: 600;
   --way-font-weight-bold: 700;
   --way-font-weight-extra-bold: 800;
-  --way-font-weight-extra-black: 900;
+  --way-font-weight-black: 900;
 
   // Form tokens
   // -------------------------------------------------
